# fast_morse_smale_2d

./: .gitignore  Cargo.toml  readme.md
data/: metadata.csv
docs/: report.md
scripts/: compression_report.py  get_slices.py  render_triangulations.py  test_functions.py  triangulate_partitions.py  visualize_function.py
src/: #tests.rs#  lib.rs  main.rs  new.rs  shader.wgsl  tests.rs  with_samples.rs
tests/: correctness.rs  error.rs  image_error.py  requirements.txt  stress.rs
